--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="flex flex-col md:flex-row justify-around ">
-        <section class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-4 border-0 md:border-r-4  md:border-r-emerald-300 w-4/5 justify-items-center ">
+        <section class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-4 border-0 md:border-r-4  md:border-r-emerald-300 w-4/5 ">
             <!-- Tringle card -->
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure class="px-10 pt-10">
