--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="flex flex-col md:flex-row justify-around ">
-        <section class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-4 border-0 md:border-r-4  md:border-r-emerald-300 w-4/5 ">
+    <div class="flex flex-row justify-center  ">
+        <section class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-6 mt-4 justify-items-center items-center border-0 md:border-r-4  md:border-r-emerald-300 w-4/5 ">
             <!-- Tringle card -->
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure class="px-10 pt-10">
